# ActiveSlamTest

./: .gitignore  README.md  combined_bringup.launch  todolist  update_to_gazebo_7-14.sh
DummyFolder/: .dummyplaceholder
ast_explore_lite/: CMakeLists.txt  package.xml
ast_explore_lite/launch/: explore.launch  explore_costmap.launch
ast_explore_lite/src/: Costmap2DClient.cpp  Explore.cpp  Frontier.cpp  FrontierSearch.cpp  Visualiser.cpp  explore.cpp  frontier_search.cpp
ast_move_base/: CMakeLists.txt  package.xml
ast_move_base/launch/: move_base.launch
ast_move_base/param/: costmap_common_params_waffle_pi.yaml
ast_stack/: CMakeLists.txt  package.xml
ast_stack/cfg/: turtlebot3_lds_2d.lua
ast_stack/launch/: ast_explore_lite.launch  combined_bringup.launch  combined_bringup_p_worlds.launch  move_base.launch  tuning_table.launch  (+1 more)
cmd_vel_watchdog/: CMakeLists.txt  package.xml
docker/: Dockerfile  turtlebot3.rosinstall
explore_lite_revised/: CMakeLists.txt  package.xml
explore_stack/: CMakeLists.txt  package.xml
maps/: hq4_2_1.pgm  hq4_2_2.pgm  hq4_2_2.yaml  hq4_2_3.pgm  hq4_2_3.yaml  hq4_2_4.yaml  m0.yaml  m1.yaml  m2.yaml  m5.yaml  m6.yaml
ss_turtle3_move_base/: CMakeLists.txt  package.xml
velocity_topic_watchdog/: CMakeLists.txt  package.xml
velocity_topic_watchdog/include/velocity_topic_watchdog/: VelocityTopicWatchdog.hpp  velocity_topic_watchdog.h
velocity_topic_watchdog/launch/: velocity_topic_watchdog.launch
velocity_topic_watchdog/src/: VelocityTopicWatchdog.cpp  velocity_topic_watchdog.cpp  velocity_watchdog_node.cpp
(+80 files in other folders)
